--- a/app/src/main/res/layout/offer_card.xml
+++ b/app/src/main/res/layout/offer_card.xml
@@ -8,14 +8,14 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
-    app:cardCornerRadius="10dp"
+    app:cardCornerRadius="2dp"
     android:elevation="4dp">
 
     <LinearLayout
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
         android:layout_gravity="center"
-        android:layout_width="120dp"
+        android:layout_width="105dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         >
@@ -23,8 +23,7 @@
             android:id="@+id/pic"
             android:layout_gravity="center"
             android:layout_height="90dp"
-            android:layout_margin="10dp"
-            android:layout_width="90dp"
+            android:layout_width="match_parent"
             android:src="@drawable/offer"/>
         <TextView
             android:id="@+id/info_text"
