--- a/app/src/main/res/menu/tbar_menu.xml
+++ b/app/src/main/res/menu/tbar_menu.xml
@@ -3,20 +3,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/search"
-        android:title="search"
-        android:icon="@drawable/search1"
+        android:icon="@drawable/ic_baseline_search_24"
         android:showAsAction="always"
-        />
+        android:title="search" />
     <item
         android:id="@+id/bookmarks"
-        android:title="book"
-        android:icon="@drawable/bookmark"
+        android:icon="@drawable/ic_outline_bookmarks_24"
         android:showAsAction="always"
-        />
+        android:title="book" />
     <item
         android:id="@+id/cart"
-        android:title="cart"
-        android:icon="@drawable/cart"
+        android:icon="@drawable/ic_outline_shopping_cart_24"
         android:showAsAction="always"
-        />
+        android:title="cart" />
 </menu>
